# batch4llm

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  compose.build.yaml  compose.dev.yaml  compose.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/batch4llm/: __main__.py  app.py  config.py  logger_config.py
backend/src/batch4llm/api/models/: batch_models.py  endpoint_models.py  file_models.py  login_models.py  model_models.py  price_calculation_models.py  prompt_models.py
backend/src/batch4llm/api/routes/: __init__.py  admin_routes.py  authentication_routes.py  batch_routes.py  endpoint_routes.py  export_routes.py  file_routes.py  model_routes.py  pipeline_routes.py  price_routes.py  prompt_routes.py  user_routes.py
backend/src/batch4llm/celery/: worker.py
backend/src/batch4llm/celery/tasks/: __init__.py  cleanup_crashed_tasks.py  dispatch_database_tasks.py  poll_provider_batches.py  process_single_file.py  (+2 more)
backend/src/batch4llm/cli/: __init__.py  deps.py  group_commands.py  user_commands.py
backend/src/batch4llm/core/: exceptions.py
backend/src/batch4llm/manager/: endpoint_manager.py
backend/src/batch4llm/service/: batch_service.py  endpoint_service.py  export_service.py  file_service.py  jwt_authenticator.py  login_service.py  model_service.py  price_service.py  prompt_service.py  user_service.py
backend/tests/e2e/: archive_test.py  batch_test.py  conftest.py  endpoint_test.py  file_test.py  prompt_test.py
backend/tests/e2e/fixtures/: __init__.py  create_resources_fixtures.py
(+210 files in other folders)
