[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "batch4llm"
version = "0.1.0"
description = "Automated evaluation of files via various AI APIs"
authors = [{ name = "Ben Kathöfer", email = "benjino@posteo.de" }]
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
batch4llm = "batch4llm.cli:app"
b4llm = "batch4llm.cli:app"
b4 = "batch4llm.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "httpx",
    "black",
    "ruff",
    "pre-commit",
    "celery-types",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
